[tool.poetry]
name = "fastapi-user-detail-upload"
version = "0.1.0"
description = "A user registratin API for hndling files"
authors = ["fortune1237 <okolofortune4@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
sqlmodel = "^0.0.16"
python-multipart = "^0.0.9"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
